fix header spacing

--- a/src/css/AboutMe.scss
+++ b/src/css/AboutMe.scss
@@ -7,13 +7,19 @@
   justify-content: space-between;
   @include media(">=phone", "<lgphone") {
     flex-direction: column-reverse;
+    width: 70vw;
+    
   }
   @include media(">=lgphone", "<tablet") {
     flex-direction: column-reverse;
+    width: 70vw;
+  
   }
   @include media(">=tablet", "<desktop") {
     flex-direction: column-reverse;
     align-items: center;
+    width: 70vw;
+   
   }
   .content {
     width: 70%;
